Se culmino con el proyecto, se agregaron lineas para consumir apis de el servidor privando personal ubuntu